:art: Remove  from create tenant request
