# docs/openapi/tenant-admin-openapi.json
@@ -562,27 +562,6 @@
                 "ACAPY_AUTO_ACCEPT_INVITES": false
               }
             ]
-          },
-          "did_method": {
-            "anyOf": [
-              {
-                "type": "string",
-                "enum": [
-                  "sov",
-                  "cheqd"
-                ]
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Did Method",
-            "description": "The DID method to use for onboarding the tenant (only used for issuers)",
-            "default": "cheqd",
-            "examples": [
-              "sov",
-              "cheqd"
-            ]
           }
         },
         "type": "object",
